Move completed sentence out of bullet point

--- a/update_supply_chain_information/supply_chains/templates/index.html
+++ b/update_supply_chain_information/supply_chains/templates/index.html
@@ -7,11 +7,9 @@
     </p>
     {% if update_complete %}
         <h2 class="govuk-heading-l">Your monthly update is complete</h2>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>
-                All supply chains have been completed for this month.
-            </li>
-        </ul>
+        <p class="govuk-body">
+            All supply chains have been completed for this month.
+        </p>
     {% else %}
         <h2 class="govuk-heading-l">Complete your monthly update</h2>
         <ul class="govuk-list govuk-list--bullet">
