--- a/update_supply_chain_information/supply_chains/templates/privacy_notice.html
+++ b/update_supply_chain_information/supply_chains/templates/privacy_notice.html
@@ -8,22 +8,17 @@
         <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
         </li>
-        <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'privacy-policy' %}" aria-current="page">Privacy policy</a>
-        </li>
     </ol>
 </nav>
 {% endblock %}
 
 {% block body %}
-    <h1 class="govuk-heading-xl">Privacy notice</h1>
-
     <h1 class="govuk-heading-xl">Privacy notice for DIT clients</h1>
 
-    <ol>
-        <li>I am an individual who belongs to the Department for International Trade (DIT) Clients. These include public
-            sector’s organisations</li>
-    </ol>
+
+    <p>I am an individual who belongs to the Department for International Trade (DIT) Clients. These include public
+        sector’s organisations</p>
+
 
     <br>
     <h2 class="govuk-heading-l">The purpose of this document</h2>
@@ -48,12 +43,12 @@
     </p>
 
     <ul>
-        <li>
-            User login profile (such as name, email address)
-        </li>
-        <li>
-            Supply chain contact and other information (such as ID, name of supply chain, contact name and government department, contact email, supply chain related information)
-        </li>
+    <li>
+        User login profile (such as name, email address)
+    </li>
+    <li>
+        Supply chain contact and other information (such as ID, name of supply chain, contact name and government department, contact email, supply chain related information)
+    </li>
     </ul>
 
     <br>
