Styling changes for contact information

--- a/update_supply_chain_information/supply_chains/templates/privacy_notice.html
+++ b/update_supply_chain_information/supply_chains/templates/privacy_notice.html
@@ -92,7 +92,7 @@
     </p>
 
     <p>
-        To withdraw your consent, please contact the Data Protection Team at data.protection@trade.gov.uk (details provided in the “Contacting us” paragraph at the end of this notice).
+        To withdraw your consent, please contact the Data Protection Team at <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a> (details provided in the “Contacting us” paragraph at the end of this notice).
     </p>
 
     <br>
@@ -195,16 +195,17 @@
         If you require a paper copy of this privacy notice, or a large print copy, or to hear it in audio version, please contact:
     </p>
 
-    <p>Data Protection Officer</p>
-    <p>Department for International Trade</p>
-    <p>Old Admiralty Building</p>
-    <p>Whitehall</p>
-    <p>LONDON</p>
-    <p>SW1A 2DY</p>
-    <p>Email: <span style="color: dodgerblue">data.protection@trade.gov.uk</span></p>
+    <div class="contact-block">
+        <p>Data Protection Officer<br>
+            Department for International Trade<br>
+            Old Admiralty Building<br>
+            Whitehall<br>
+            LONDON<br>
+            SW1A 2DY<br>
+        </p>
+    </div>
 
-
-
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
 
     <br>
     <h2 class="govuk-heading-l">Contacting us</h2>
@@ -213,13 +214,17 @@
         If you would like to exercise any of your rights, or have any questions about this privacy notice, or any concerns or complaints about how we handle your personal information, please contact:
     </p>
 
-    <p>Data Protection Officer</p>
-    <p>Department for International Trade</p>
-    <p>Old Admiralty Building</p>
-    <p>Whitehall</p>
-    <p>LONDON</p>
-    <p>SW1A 2DY</p>
-    <p>Email: <span style="color: dodgerblue">data.protection@trade.gov.uk</span></p>
+    <div class="contact-block">
+        <p>Data Protection Officer<br>
+            Department for International Trade<br>
+            Old Admiralty Building<br>
+            Whitehall<br>
+            LONDON<br>
+            SW1A 2DY<br>
+        </p>
+    </div>
+
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
 
     <p>
         The Data Protection Officer (DPO) is responsible for independent advice and monitoring of DIT's use of personal information.
@@ -233,14 +238,22 @@
         The General Data Protection Regulation also gives you the right to lodge a complaint with a supervisory authority, in particular in the European Union (or European Economic Area) state where you work, normally live or where any alleged infringement of data protection laws occurred. The supervisory authority in the UK is the Information Commissioner who may be contacted using the details below.
     </p>
 
-    <p>Information Commissioner's Office</p>
-    <p>Wycliffe House</p>
-    <p>Water Lane</p>
-    <p>Wilmslow</p>
-    <p>Cheshire</p>
-    <p>SK9 5AF</p>
-    <p>0303 123 1113</p>
-    <p>Email: <span style="color: dodgerblue">casework@ico.org.uk</span></p>
+    <div class="contact-block">
+        <p>Information Commissioner's Office<br>
+            Wycliffe House<br>
+            Water Lane<br>
+            Wilmslow<br>
+            Cheshire<br>
+            SK9 5AF<br>
+        </p>
+    </div>
+
+    <p>
+        Telephone: 0303 123 1113<br>
+        <a href="https://www.gov.uk/call-charges">Find out about call charges</a>
+    </p>
+
+    <p>Email: <a href="mailto:casework@ico.org.uk">casework@ico.org.uk</a></p>
 
     <p>
         Any complaint to the Information Commissioner is without prejudice to your right to seek redress through the courts.
@@ -263,13 +276,24 @@
         The Department for International Trade is registered as a Data Controller under the General Data Protection Regulation and Data Protection Act 2018.
     </p>
 
-    <p>Data Protection Team</p>
-    <p>Department for International Trade</p>
-    <p>Old Admiralty Building</p>
-    <p>Whitehall</p>
-    <p>LONDON</p>
-    <p>SW1A 2DY</p>
-    <p>Email: <span style="color: dodgerblue">data.protection@trade.gov.uk</span></p>
+    <div class="contact-block">
+        <p>Data Protection Team<br>
+            Department for International Trade<br>
+            Old Admiralty Building<br>
+            Whitehall<br>
+            LONDON<br>
+            SW1A 2DY<br>
+        </p>
+    </div>
 
+    <p>Email: <a href="mailto:data.protection@trade.gov.uk">data.protection@trade.gov.uk</a></p>
 
+    <br>
+    <div class="app-back-to-top" data-module="app-back-to-top">
+        <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
+          <svg role="presentation" focusable="false" class="app-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="19" height="17" viewBox="0 0 19 17">
+            <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
+          </svg>Back to top
+        </a>
+      </div>
     {% endblock %}
