--- a/update_supply_chain_information/assets/stylesheets/supply_chain.scss
+++ b/update_supply_chain_information/assets/stylesheets/supply_chain.scss
@@ -22,3 +22,10 @@
 .tasklist-top-border {
   border-top: 1px solid #b1b4b6;
 }
+
+.contact-block {
+  border-left: 1px solid #b1b4b6;
+  padding-left: 15px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
