Styling bullet points for privacy notice.

--- a/update_supply_chain_information/supply_chains/templates/privacy_notice.html
+++ b/update_supply_chain_information/supply_chains/templates/privacy_notice.html
@@ -42,7 +42,7 @@
         We process (collect and use) the following personal information about you:
     </p>
 
-    <ul>
+    <ul class="govuk-list govuk-list--bullet">
     <li>
         User login profile (such as name, email address)
     </li>
@@ -81,7 +81,7 @@
         The legal bases for processing your personal data are:
     </p>
 
-    <ul>
+    <ul class="govuk-list govuk-list--bullet">
         <li>
             to perform our public tasks
         </li>
@@ -111,7 +111,7 @@
         We will not:
     </p>
 
-    <ul>
+    <ul class="govuk-list govuk-list--bullet">
         <li>
             sell or rent your data to third parties
         </li>
@@ -160,7 +160,7 @@
         Under the data protection laws, you have several rights in respect of your information and the way we use it. You have the right to request:
     </p>
 
-    <ul>
+    <ul class="govuk-list govuk-list--bullet">
         <li>
             information about how your personal data is processed
         </li>
@@ -176,7 +176,7 @@
         You can also:
     </p>
 
-    <ul>
+    <ul class="govuk-list govuk-list--bullet">
         <li>
             raise an objection about how your personal data is processed
         </li>
