Add link to footer for privacy and tests

--- a/update_supply_chain_information/supply_chains/templates/privacy_notice.html
+++ b/update_supply_chain_information/supply_chains/templates/privacy_notice.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %}Privacy policy – {{ block.super }}{% endblock page_title %}
+{% block page_title %}Privacy notice – {{ block.super }}{% endblock page_title %}
 
 {% block breadcrumbs %}
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
