Fix failing test due to addition of footer link and formatting changes

--- a/update_supply_chain_information/supply_chains/templates/403.html
+++ b/update_supply_chain_information/supply_chains/templates/403.html
@@ -5,7 +5,7 @@
 <p class="govuk-body">You do not have permission to access this page.</p>
 <p class="govuk-body">
     Please try one of the following:
-    <ul class="govuk-list govuk-list--bullet">
+    <ul class="govuk-list govuk-list--bullet" id="message-list">
         <li>If you typed the web address, check it is correct</li>
         <li>If you pasted the web address, check you copied the entire address</li>
         <li>
