Update SC Summary e2e tests

--- a/update_supply_chain_information/supply_chains/templates/sc_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_summary.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %}Summary – {{ supply_chain.name }} – {{ block.super }}{% endblock page_title %}
+{% block page_title %}Summary – {{ block.super }}{% endblock page_title %}
 
 {% block breadcrumbs %}
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
