--- a/update_supply_chain_information/supply_chains/templates/sc_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_summary.html
@@ -8,46 +8,39 @@
         <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
         </li>
-        <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-summary' %}" aria-current="page">Supply chain
-                summary</a>
-        </li>
     </ol>
 </nav>
 {% endblock %}
 
-{% block page_header %} {{ block.super }} {% endblock %}
-
 {% block body %}
+<h1 class="govuk-heading-xl"> Supply chain summary</h1>
 
-    <h2 class="govuk-heading-xl"> Supply chain summary</h1>
-    <p class="govuk-body">
-        Select a supply chain to view or edit details
-    </p>
+<p>Make sure key information about your supply chain is complete.</p>
+<p>Select a supply chain below to view and edit your information.</p>
 
-    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        {% for sc in supply_chains %}
-            <div class="govuk-accordion__section ">
-                <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                    <span class="govuk-accordion__section-button" id="accordion-default-heading">
-                        {{ sc.name }}
-                    </span>
-                </h2>
-                </div>
-                <div id="accordion-default-content" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading">
-                    {% include "includes/sc_key_info_list.html" %}
-                </div>
-            </div>
-        {% endfor %}
+<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
+    {% for sc in supply_chains %}
+    <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading">
+                    {{ sc.name }}
+                </span>
+            </h2>
+        </div>
+        <div id="accordion-default-content" class="govuk-accordion__section-content"
+            aria-labelledby="accordion-default-heading">
+            {% include "includes/sc_key_info_list.html" %}
+        </div>
     </div>
+    {% endfor %}
+</div>
 
-    {% if supply_chains.has_other_pages %}
-        {% include 'includes/pagination.html' with objects=supply_chains objects_name="supply chains" %}
-    {% endif %}
+{% if supply_chains.has_other_pages %}
+{% include 'includes/pagination.html' with objects=supply_chains objects_name="supply chains" %}
+{% endif %}
 
 
-    <a href={% url 'index' %}
-        class="govuk-button govuk-button--secondary btn" data-module="govuk-button">Back to home</a>
+<a href={% url 'index' %} class="govuk-button govuk-button--secondary btn" data-module="govuk-button">Back</a>
 
 {% endblock %}
