--- a/update_supply_chain_information/supply_chains/templates/sc_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_summary.html
@@ -20,19 +20,23 @@
 
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
     {% for sc in supply_chains %}
-    <div class="govuk-accordion__section ">
-        <div class="govuk-accordion__section-header">
-            <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading">
-                    {{ sc.name }}
-                </span>
-            </h2>
+    {% with it=forloop.counter|stringformat:"i" %}
+    {% with heading="accordion-default-heading-"|add:it content="accordion-default-content-"|add:it %}
+        <div class="govuk-accordion__section ">
+            <div class="govuk-accordion__section-header">
+                <h2 class="govuk-accordion__section-heading">
+                    <span class="govuk-accordion__section-button" id={{heading}}>
+                        {{ sc.name }}
+                    </span>
+                </h2>
+            </div>
+            <div id={{content}} class="govuk-accordion__section-content"
+                aria-labelledby={{heading}}>
+                {% include "includes/sc_key_info_list.html" %}
+            </div>
         </div>
-        <div id="accordion-default-content" class="govuk-accordion__section-content"
-            aria-labelledby="accordion-default-heading">
-            {% include "includes/sc_key_info_list.html" %}
-        </div>
-    </div>
+    {% endwith %}
+    {% endwith %}
     {% endfor %}
 </div>
 
