--- a/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
@@ -31,7 +31,7 @@
           {{ action.name }}
         </span>
       </h2>
-      <div class="govuk-accordion__section-summary govuk-body" id="{{ summary }}">
+      <div class="govuk-accordion__section-summary govuk-body summary-action-description" id="{{ summary }}">
         {{ action.description|truncatechars:150 }}
       </div>
     </div>
