--- a/update_supply_chain_information/supply_chains/templates/edit_strategic_action.html
+++ b/update_supply_chain_information/supply_chains/templates/edit_strategic_action.html
@@ -9,17 +9,15 @@
       <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' supply_chain.slug %}">{{ supply_chain.name }}</a>
+      <a class="govuk-breadcrumbs__link" href="#">Strategic action summary</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="{% url 'strategic-action-summary' supply_chain.slug %}">Strategic actions for {{ supply_chain.name }}</a>
     </li>
-    <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{% url 'edit-strategic-action' supply_chain.slug strategic_action.slug %}" aria-current="page">Update {{ strategic_action.name }}</a>
-    </li>
   </ol>
 </nav>
 {% endblock %}
+
 {% block body %}
 <h1 class="govuk-heading-l">Update {{ strategic_action.name }}</h1>
 {% endblock %}
