--- a/update_supply_chain_information/supply_chains/templates/edit_strategic_action.html
+++ b/update_supply_chain_information/supply_chains/templates/edit_strategic_action.html
@@ -111,6 +111,22 @@
 </div><br>
 
 <div>
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+        <h3 class="govuk-fieldset__heading ">
+            {{ form.is_ongoing.label }}
+        </h3>
+    </legend>
+
+    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+        {% for radio in form.is_ongoing %}
+            {{ radio.tag }}
+        {% endfor %}
+    </div>
+  </fieldset>
+</div><br>
+
+<div>
   <h3 class="govuk-label-wrapper">
     <label class="govuk-label govuk-label--s" for="other_dependencies">
       Are there any other dependencies or requirements for applying this strategic action? (Optional)
